Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/src/main/frontend/skin/less/webconferencing.less
+++ b/src/main/frontend/skin/less/webconferencing.less
@@ -177,7 +177,7 @@ a {
     color: #d62126;
   }
   100% {
-    color: #999999;
+    color: #767676;
   }
 }
 @-webkit-keyframes blink {
@@ -185,7 +185,7 @@ a {
     color: #d62126;
   }
   100% {
-    color: #999999;
+    color: #767676;
   }
 }
 
